tests/src/frontend/syntax/invalid/readonly_frozen_method.sk
class C() {
  readonly frozen fun m(): String { "Fail" }
}

fun main(): String {
  C::m()
}
